# demo-conversational-crew

./: .env.sample  .gitignore  AGENTS.md  README.md  crewai_flow.html  pyproject.toml  terminal_chat.py  test_chat.py
demo/: streamlit_app.py
demo_slackbot/: .env.sample  ARCHITECTURE.md  README.md  app.py
demo_streamlit_pull/: streamlit_app.py
demo_webhooks/: .env.sample  .gitignore  ARCHITECTURE.md  Procfile  QUICKSTART.md  README.md  app.py  requirements.txt  run_flask.sh  start.sh
demo_webhooks/templates/: index.html
knowledge/: enterprise_kb.csv  process-oss-docs.py
knowledge/oss-docs/: installation.mdx  telemetry.mdx
knowledge/oss-docs/concepts/: agents.mdx  event-listener.mdx  flows.mdx  knowledge.mdx  memory.mdx  planning.mdx  tasks.mdx  testing.mdx
knowledge/oss-docs/how-to/: agentops-observability.mdx  before-and-after-kickoff-hooks.mdx  coding-agents.mdx  conditional-tasks.mdx  create-custom-tools.mdx  custom-llm.mdx  kickoff-async.mdx  kickoff-for-each.mdx  langfuse-observability.mdx  llm-connections.mdx  mlflow-observability.mdx  multimodal-agents.mdx  openlit-observability.mdx  replay-tasks-from-latest-crew-kickoff.mdx  sequential-process.mdx  weave-integration.mdx
knowledge/oss-docs/snippets/: snippet-intro.mdx
knowledge/oss-docs/tools/: aimindtool.mdx  apifyactorstool.mdx  bedrockinvokeagenttool.mdx  bravesearchtool.mdx  browserbaseloadtool.mdx  codedocssearchtool.mdx  codeinterpretertool.mdx  composiotool.mdx  dalletool.mdx  directoryreadtool.mdx  directorysearchtool.mdx  docxsearchtool.mdx  filereadtool.mdx  firecrawlscrapewebsitetool.mdx  firecrawlsearchtool.mdx  langchaintool.mdx  linkupsearchtool.mdx  mdxsearchtool.mdx  multiontool.mdx  mysqltool.mdx  patronustools.mdx  pdfsearchtool.mdx  qdrantvectorsearchtool.mdx  s3readertool.mdx  s3writertool.mdx  scrapewebsitetool.mdx  scrapflyscrapetool.mdx  serperdevtool.mdx
src/conversational_routing/: main.py
(+134 files in other folders)
