[project]
name = "conversational_routing"
version = "0.1.0"
description = "conversational_routing using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "colorama>=0.4.6",
    "crewai[tools]==1.8.1",
    "flask>=3.1.2",
    "streamlit==1.51.0",
]

[project.scripts]
kickoff = "conversational_routing.main:kickoff"
plot = "conversational_routing.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
