[project]
name = "conversational_routing"
version = "0.1.0"
description = "conversational_routing using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "colorama>=0.4.6",
    "crewai[google-genai,tools]==1.14.0",
    "flask~=3.1.3",
    "google-generativeai~=0.8.6",
    "slack-bolt~=1.28.0",
    "streamlit~=1.56.0",
]

[project.scripts]
kickoff = "conversational_routing.main:kickoff"
plot = "conversational_routing.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"

# [tool.uv.sources]
# crewai = { path = "/Users/mplachta/Workspace/crewai/lib/crewai", editable = true }
